force-app/main/default/objects/Job_Posting__c/fields/Education_Certification__c.field-meta.xml
<CustomField>
    <fullName>Education_Certification__c</fullName>
    <label>Education &amp; Certification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>