force-app/main/default/objects/Job_Posting__c/fields/Experience_Level__c.field-meta.xml
<CustomField>
    <fullName>Experience_Level__c</fullName>
    <label>Experience Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>Entry Level (0-1 years)</fullName>
            </value>
            <value>
                <fullName>Associate (1-3 years)</fullName>
            </value>
            <value>
                <fullName>Mid Senior Level (3-6 years)</fullName>
            </value>
            <value>
                <fullName>Senior Level (6+ years)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>