force-app/main/default/objects/Job_Posting__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hiring Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job Posting</relationshipLabel>
    <relationshipName>Job_Posting</relationshipName>
    <type>Lookup</type>
</CustomField>