force-app/main/default/objects/Job_Posting__c/fields/Soft_Skills__c.field-meta.xml
<CustomField>
    <fullName>Soft_Skills__c</fullName>
    <label>Soft Skills</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>