force-app/main/default/objects/Job_Posting__c/fields/Technical_Skills__c.field-meta.xml
<CustomField>
    <fullName>Technical_Skills__c</fullName>
    <label>Technical Skills</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>